Fix bug of h2 and p not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,3 +202,15 @@ footer ul li a{
 .apply-form form button:hover {
     background: #2f11b6;
 } 
+ /* About Us */
+ .about-us-main{
+    margin-top: 1em;
+}
+.about-us-main h2{
+    text-align: center;
+    margin-bottom: 0.5em;
+}
+.about-us-main p{
+    text-align: justify;
+}
+
